add Success Contact page layout and styles

--- a/src/contact--success.html
+++ b/src/contact--success.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Reset password - Success | Playhero</title>
+    <title>Contact - Success | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -58,12 +58,15 @@
                     </defs>
                   </svg>
                 </div>
-                <div class="message-box__title">Check Your Email!</div>
-                <div class="message-box__content">We’ve just sent you an email.<br />Click the link to change your password</div>
+                <div class="message-box__title">Message Sent!</div>
+                <div class="message-box__content">Thanks! We’ve received your message.<br />We’ll respond as soon as we can.</div>
+                <div class="message-box__actions">
+                  <a href="#" class="primary-button primary-button--solid" type="submit">Home</a>
+                </div>
               </div>
             </div>
             <div class="single-boxed-section__decor">
-              <img class="single-boxed-section__decor-image" src="./assets/success-reset-password.svg" />
+              <img class="single-boxed-section__decor-image" src="./assets/contact.svg" />
             </div>
           </div>
         </div>
