add Login page layout and styles

--- a/src/contact--invalid-complete.html
+++ b/src/contact--invalid-complete.html
@@ -45,7 +45,7 @@
         <div class="page__content-container">
           <div class="single-boxed-section">
             <div class="single-boxed-section__box">
-              <form class="form-box">
+              <div class="form-box">
                 <div class="form-box__header">
                   <div class="form-box__title"><b>Contact</b> Us</div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="form-box__actions">
                   <button class="primary-button primary-button--solid" type="submit" disabled>Send</button>
                 </div>
-              </form>
+              </div>
             </div>
             <div class="single-boxed-section__decor">
               <img class="single-boxed-section__decor-image" src="./assets/contact.svg" />
