--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -45,7 +45,7 @@
         <div class="page__content-container">
           <div class="single-boxed-section">
             <div class="single-boxed-section__box">
-              <form class="form-box">
+              <div class="form-box">
                 <div class="form-box__header">
                   <div class="form-box__title"><b>Change</b> Password</div>
                 </div>
@@ -65,7 +65,7 @@
                 <div class="form-box__actions">
                   <button class="primary-button primary-button--solid" type="submit" disabled>Send</button>
                 </div>
-              </form>
+              </div>
             </div>
             <div class="single-boxed-section__decor">
               <img class="single-boxed-section__decor-image" src="./assets/reset-password.svg" />
