add Registration page layout and styles

--- a/src/reset-password--success.html
+++ b/src/reset-password--success.html
@@ -47,6 +47,7 @@
             <div class="single-boxed-section__box">
               <div class="message-box">
                 <div class="message-box__icon">
+                  <!-- START: circle-tick.svg -->
                   <svg width="80" height="81" viewBox="0 0 80 81" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0)">
                     <path d="M40 0.5C32.0887 0.5 24.3552 2.84596 17.7772 7.24122C11.1992 11.6365 6.07235 17.8836 3.04484 25.1927C0.0173371 32.5017 -0.774804 40.5444 0.768605 48.3036C2.31201 56.0629 6.12164 63.1902 11.7157 68.7843C17.3098 74.3784 24.4372 78.188 32.1964 79.7314C39.9556 81.2748 47.9983 80.4827 55.3073 77.4552C62.6164 74.4277 68.8635 69.3008 73.2588 62.7228C77.654 56.1448 80 48.4112 80 40.5C79.969 29.9009 75.7447 19.7448 68.25 12.25C60.7553 4.75527 50.5991 0.531025 40 0.5ZM31.7885 61.8269L11.2885 41.3269L17.0385 35.5769L31.8077 50.3462L62.9808 19.1731L68.7308 24.9231L31.7885 61.8269Z" fill="#1EA26B"/>
@@ -57,6 +58,7 @@
                     </clipPath>
                     </defs>
                   </svg>
+                  <!-- END: circle-tick.svg -->
                 </div>
                 <div class="message-box__title">Check Your Email!</div>
                 <div class="message-box__content">We’ve just sent you an email.<br />Click the link to change your password</div>
