add Success Registration page layout

--- a/src/registration--success.html
+++ b/src/registration--success.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Contact - Success | Playhero</title>
+    <title>Registration - Success | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -34,10 +34,15 @@
               <li>
                 <a class="header-menu__link" href="/">Contacts</a>
               </li>
-              <li>
-                <a class="header-menu__link" href="/">Account</a>
-              </li>
             </ul>
+            <div class="auth-button-list">
+              <div class="auth-button-list__item">
+                <a class="secondary-button secondary-button--stroked" href="#">Log In</a>
+              </div>
+              <div class="auth-button-list__item">
+                <a class="secondary-button secondary-button--solid" href="#">Register</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -60,15 +65,12 @@
                   </svg>
                   <!-- END: circle-tick.svg -->
                 </div>
-                <div class="message-box__title">Message Sent!</div>
-                <div class="message-box__content">Thanks! We’ve received your message.<br />We’ll respond as soon as we can.</div>
-                <div class="message-box__actions">
-                  <a href="#" class="primary-button primary-button--solid" type="submit">Home</a>
-                </div>
+                <div class="message-box__title">Check Your Email!</div>
+                <div class="message-box__content">We’ve just sent you an email.<br />Click the link to verify.</div>
               </div>
             </div>
             <div class="single-boxed-section__decor">
-              <img class="single-boxed-section__decor-image" src="./assets/contact.svg" />
+              <img class="single-boxed-section__decor-image" src="./assets/success-registration.svg" />
             </div>
           </div>
         </div>
