Update Hero Profile page with Confirm Sale modal layout, styles and scripts

--- a/src/hero-profile--with-confirm-sale-modal.html
+++ b/src/hero-profile--with-confirm-sale-modal.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hero Profile | Playhero</title>
+    <title>Hero Profile - with Confirm Sale Modal | Playhero</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.min.css" />
   </head>
   <body>
-    <div class="page">
+    <div id="hero-profile-page" class="page">
       <div class="page__header">
         <div class="page__header-container">
           <a aria-current="page" class="page__logo" href="/">
@@ -187,7 +187,7 @@
                       <div class="purchase-box__price-note">3 spots left</div>
                     </div>
                     <div class="purchase-box__actions">
-                      <button type="button" class="primary-button primary-button--solid">Book</button>
+                      <button type="button" id="purchase-submit-button" class="primary-button primary-button--solid">Book</button>
                     </div>
                   </div>
                 </div>
@@ -428,5 +428,60 @@
         </ul>
       </div>
     </div>
+    <div id="confirm-sale-modal" class="modal">
+      <div class="modal__backdrop"></div>
+      <div class="modal__pane">
+        <button type="button" id="close-modal-button" class="modal__close-button">
+          <!-- START: cross.svg -->
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M14.6666 1.33334L1.33331 14.6667" stroke="#2B2B2B" stroke-width="0.666667" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M1.33331 1.33334L14.6666 14.6667" stroke="#2B2B2B" stroke-width="0.666667" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          <!-- END: cross.svg -->
+        </button>
+        <div class="modal__header">
+          <div class="modal__title"><b>Book</b> Session</div>
+          <div class="modal__subtitle">As soon as your payment’s been received, we’ll contact <b>Hero Name</b> to schedule your session.</div>
+        </div>
+        <div class="modal__content">
+          <div class="book-session-form">
+            <div class="book-session-form__header">
+              <div class="book-session-form__header-main">
+                <div class="book-session-form__price-label">Session Price</div>
+                <div class="book-session-form__price">£2,500</div>
+              </div>
+              <div class="book-session-form__card-type">
+                <!-- START: card-unknown.svg -->
+                <svg width="48" height="32" viewBox="0 0 48 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect width="48" height="32" rx="2.87452" fill="#EB922F"/>
+                  <rect x="8" y="20" width="32" height="2" rx="1" fill="white"/>
+                  <rect x="8" y="24" width="8" height="2" rx="1" fill="white"/>
+                </svg>
+                <!-- END: card-unknown.svg -->
+              </div>
+            </div>
+            <div class="book-session-form__fields">
+              <div class="form-field">
+                <input type="text" class="form-field__input" placeholder="Full Name" required />
+              </div>
+              <div class="form-field">
+                <input type="number" class="form-field__input" placeholder="0000 0000 0000 0000" required />
+              </div>
+              <div class="form-field">
+                <input type="text" class="form-field__input" placeholder="00/00" required />
+              </div>
+              <div class="form-field">
+                <input type="text" class="form-field__input" placeholder="000" required />
+              </div>
+            </div>
+            <div class="book-session-form__actions">
+              <button class="primary-button primary-button--solid" type="submit" disabled>Book Session</button>
+            </div>
+          </div>
+        </div>
+        <div class="modal__footer">By making this booking, you agree to our <a href="#">Terms</a> & <a href="#">Privacy Policy</a>.</div>
+      </div>
+    </div>
+    <script src="./scripts/hero-profile.js"></script>
   </body>
 </html>
