--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -48,7 +48,7 @@
               <div class="form-box">
                 <div class="form-box__title"><b>Change</b> Password</div>
                 <div class="form-box__fields">
-                  <div class="form-field">
+                  <div class="form-field form-field--has-prefix">
                     <div class="form-field__prefix">
                       <!-- START: field-email.svg -->
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
