--- a/src/contact.html
+++ b/src/contact.html
@@ -48,7 +48,7 @@
               <div class="form-box">
                 <div class="form-box__title"><b>Contact</b> Us</div>
                 <div class="form-box__fields">
-                  <div class="form-field">
+                  <div class="form-field form-field--has-prefix">
                     <div class="form-field__prefix">
                       <!-- START: field-avatar.svg -->
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +59,7 @@
                     </div>
                     <input type="text" class="form-field__input" placeholder="Full Name" required />
                   </div>
-                  <div class="form-field">
+                  <div class="form-field form-field--has-prefix">
                     <div class="form-field__prefix">
                       <!-- START: field-email.svg -->
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
                     </div>
                     <input type="email" class="form-field__input" placeholder="Email Address" required />
                   </div>
-                  <div class="form-field">
+                  <div class="form-field form-field--has-prefix">
                     <div class="form-field__prefix">
                       <!-- START: field-write.svg -->
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
