--- a/src/hero-profile--estimate-with-confirm-sale-modal.html
+++ b/src/hero-profile--estimate-with-confirm-sale-modal.html
@@ -430,7 +430,7 @@
       </div>
     </div>
     <div id="confirm-sale-modal" class="modal">
-      <div class="modal__backdrop"></div>
+      <div id="modal-backdrop" class="modal__backdrop"></div>
       <div class="modal__pane">
         <button type="button" id="close-modal-button" class="modal__close-button">
           <!-- START: cross.svg -->
