--- a/src/index--guest.html
+++ b/src/index--guest.html
@@ -32,7 +32,7 @@
                 >
               </li>
               <li>
-                <a class="header-menu__link" href="/">Contacts</a>
+                <a class="header-menu__link" href="/">Contact</a>
               </li>
             </ul>
             <div class="auth-button-list">
@@ -447,7 +447,7 @@
                 </svg>
                 <!-- END: contacts.svg -->
               </span>
-              <span class="toolbar-menu__label">Contacts</span>
+              <span class="toolbar-menu__label">Contact</span>
             </a>
           </li>
           <li>
