--- a/src/reset-password.html
+++ b/src/reset-password.html
@@ -32,7 +32,7 @@
                 >
               </li>
               <li>
-                <a class="header-menu__link" href="/">Contacts</a>
+                <a class="header-menu__link" href="/">Contact</a>
               </li>
               <li>
                 <a class="header-menu__link" href="/">Account</a>
@@ -266,7 +266,7 @@
                 </svg>
                 <!-- END: contacts.svg -->
               </span>
-              <span class="toolbar-menu__label">Contacts</span>
+              <span class="toolbar-menu__label">Contact</span>
             </a>
           </li>
           <li>
