--- a/src/index--guest.html
+++ b/src/index--guest.html
@@ -287,13 +287,13 @@
           <div class="page__footer-section">
             <div>
               <ul class="footer-menu">
-                <li>
+                <li class="footer-menu__item">
                   <a class="footer-menu__link" href="/">Terms</a>
                 </li>
-                <li>
+                <li class="footer-menu__item">
                   <a class="footer-menu__link" href="/">Privacy</a>
                 </li>
-                <li>
+                <li class="footer-menu__item">
                   <a class="footer-menu__link" href="/">Cookies</a>
                 </li>
               </ul>
